<?xml version="1.0"?>  
<package format="3">  
  <name>process_package</name>  
  <version>0.0.1</version>  
  <description>Piyingbot process package</description>  
  
  <maintainer email="ge90114b@outlook.com">ge90114b</maintainer>  
  
  <license>Apache-2.0</license>  
  
  <buildtool_depend>ament_python</buildtool_depend>  
  <exec_depend>rclpy</exec_depend>  
  
  <export>  
    <build_type>ament_python</build_type>  
  </export>  
</package>