<?xml version="1.0"?>  
<package format="3">  
  <name>piying_processpack</name>  
  <version>0.0.1</version>  
  <description>Piyingbot process package</description>  
  
  <maintainer email="ge90114b@outlook.com">ge90114b</maintainer>  
  
  <license>Apache-2.0</license>  
  
  <depend>rclpy</depend> 
  <depend>launch_ros</depend>  
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  
  <export>  
    <build_type>ament_python</build_type>  
  </export>  
</package>